--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
   </head>
   <body>
     <a-scene>
-      <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
-      <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
-      <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
+      <a-box position="-1 1 -3" rotation="45 45 45" color="#4CC3D9"></a-box>
+      <a-sphere position="0 1.25 -5" radius="1" color="#A55FA6"></a-sphere>
+      <a-sphere position="0.9 1.25 -5" radius="1" color="#A55FA6"></a-sphere>
+      <a-cylinder position="0.45 2.79 -5" radius="0.7" height="2" color="#A55FA6"></a-cylinder>
+      <a-sphere position="0.45 3.75 -5" radius="0.72" color="#fc3fb3"></a-sphere>
+   <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
       <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
-      <a-sky color="#ECECEC"></a-sky>
+      <a-sky src="http://puzzledragonx.com/en/img/monster/MONS_3392.jpg"></a-sky>
     </a-scene>
   </body>
 </html>
