--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   </head>
   <body>
     <a-scene>
+      <a-assets>
+       <img id="AVulpix" src="../images/alola vulpix.png">
+       </a-assets>
 			<a-entity camera="user-height: 1.6" universal-controls></a-entity>
       <a-box position="-1 1 -3" rotation="45 45 45" color="#4CC3D9"></a-box>
       <a-sphere position="0 1.25 -5" radius="1" color="#A55FA6"></a-sphere>
@@ -17,7 +20,7 @@
       <a-sphere position="0.45 3.75 -5" radius="0.72" color="#fc3fb3"></a-sphere>
       <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
       <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
-      <a-sky src="http://puzzledragonx.com/en/img/monster/MONS_3392.jpg"></a-sky>
+      <a-sky src="#AVulpix"></a-sky>
     </a-scene>
   </body>
 </html>
