Progress on loading obj

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
       <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
       <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
       <a-sky src="http://puzzledragonx.com/en/img/monster/MONS_3392.jpg"></a-sky>
+
+			<a-entity>
+				<a-entity obj-loader="src: url(./Squirtle/BR_Squirtle.obj); mtl: url(./Squirtle/BR_Squirtle.mtl);"></a-entity>
+			</a-entity>
     </a-scene>
   </body>
 </html>
