--- a/index.html
+++ b/index.html
@@ -22,8 +22,16 @@
       <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
 			<a-sky src="#AVulpix"></a-sky>
 
-			<a-entity>
-				<a-entity obj-loader="src: url(./Squirtle/BR_Squirtle.obj); mtl: url(./Squirtle/BR_Squirtle.mtl);"></a-entity>
+			<a-entity position="-6 0 -6">
+				<a-entity
+					obj-loader="src: url(./Models/Squirtle.obj);"
+					material="color: #41f4df"
+					scale="0.5 0.5 0.5"></a-entity>
+				<a-entity
+					obj-loader="src: url(./Models/Charmander.obj);"
+					material="color: #f99543"
+					scale="0.5 0.5 0.5"
+					position="0 0 -2"></a-entity>
 			</a-entity>
     </a-scene>
   </body>
