--- a/index.html
+++ b/index.html
@@ -1,25 +1,32 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Hello, World! - A-Frame</title>
-    <meta name="description" content="Hello, World! - A-Frame">
+
+	<head>
+		<meta charset="utf-8">
+		<title>Hello, World! - A-Frame</title>
+		<meta name="description" content="Hello, World! - A-Frame">
 		<script src="https://aframe.io/releases/0.4.0/aframe.min.js"></script>
- 		<script src="bundle.js"></script>
-  </head>
-  <body>
-    <a-scene>
-      <a-assets>
-       <img id="AVulpix" src="../images/alola vulpix.png">
-       </a-assets>
+		<script src="bundle.js"></script>
+	</head>
+
+	<body>
+		<a-scene>
+			<a-assets>
+				<img id="AVulpix" src="../images/alola vulpix.png">
+			</a-assets>
+
 			<a-entity camera="user-height: 1.6" universal-controls></a-entity>
-      <a-box position="-1 1 -3" rotation="45 45 45" color="#4CC3D9"></a-box>
-      <a-sphere position="0 1.25 -5" radius="1" color="#A55FA6"></a-sphere>
-      <a-sphere position="0.9 1.25 -5" radius="1" color="#A55FA6"></a-sphere>
-      <a-cylinder position="0.45 2.79 -5" radius="0.7" height="2" color="#A55FA6"></a-cylinder>
-      <a-sphere position="0.45 3.75 -5" radius="0.72" color="#fc3fb3"></a-sphere>
-      <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
-      <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
+
+			<a-entity>
+				<a-box position="-1 1 -3" rotation="45 45 45" color="#4CC3D9"></a-box>
+				<a-sphere position="0 1.25 -5" radius="1" color="#A55FA6"></a-sphere>
+				<a-sphere position="0.9 1.25 -5" radius="1" color="#A55FA6"></a-sphere>
+				<a-cylinder position="0.45 2.79 -5" radius="0.7" height="2" color="#A55FA6"></a-cylinder>
+				<a-sphere position="0.45 3.75 -5" radius="0.72" color="#fc3fb3"></a-sphere>
+				<a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
+				<a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
+			</a-entity>
+			
 			<a-sky rotation="0 -90 0" src="#AVulpix"></a-sky>
 
 			<a-entity position="-6 0 -6">
@@ -33,6 +40,7 @@
 					scale="0.5 0.5 0.5"
 					position="0 0 -2"></a-entity>
 			</a-entity>
-    </a-scene>
-  </body>
+		</a-scene>
+	</body>
+
 </html>
