--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
 
 			<a-entity camera="user-height: 1.6" universal-controls></a-entity>
 
-			<a-entity>
-				<a-box position="-1 1 -3" rotation="45 45 45" color="#4CC3D9"></a-box>
-				<a-sphere position="0 1.25 -5" radius="1" color="#A55FA6"></a-sphere>
-				<a-sphere position="0.9 1.25 -5" radius="1" color="#A55FA6"></a-sphere>
-				<a-cylinder position="0.45 2.79 -5" radius="0.7" height="2" color="#A55FA6"></a-cylinder>
-				<a-sphere position="0.45 3.75 -5" radius="0.72" color="#fc3fb3"></a-sphere>
-				<a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
-				<a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
+
+			<a-entity dynamic-body position="0 1 -5">
+				<a-sphere position="-0.45 1.25 0" radius="1" color="#A55FA6"></a-sphere>
+				<a-sphere position="0.45 1.25 0" radius="1" color="#A55FA6"></a-sphere>
+				<a-cylinder position="0 2.79 0" radius="0.7" height="2" color="#A55FA6"></a-cylinder>
+				<a-sphere position="0 3.75 0" radius="0.72" color="#fc3fb3"></a-sphere>
 			</a-entity>
+
+			<a-plane static-body position="0 0 -4" rotation="-90 0 0" width="40" height="40" color="#7BC8A4"></a-plane>
 			
 			<a-sky rotation="0 -90 0" src="#AVulpix"></a-sky>
 
