--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	</head>
 
 	<body>
-		<a-scene>
+		<a-scene physics="debug: true">
 			<a-assets>
 				<img id="AVulpix" src="../images/alola vulpix.png">
 			</a-assets>
@@ -18,11 +18,11 @@
 			<a-entity camera="user-height: 1.6" universal-controls></a-entity>
 
 
-			<a-entity dynamic-body position="0 1 -5">
-				<a-sphere position="-0.45 1.25 0" radius="1" color="#A55FA6"></a-sphere>
-				<a-sphere position="0.45 1.25 0" radius="1" color="#A55FA6"></a-sphere>
-				<a-cylinder position="0 2.79 0" radius="0.7" height="2" color="#A55FA6"></a-cylinder>
-				<a-sphere position="0 3.75 0" radius="0.72" color="#fc3fb3"></a-sphere>
+			<a-entity dynamic-body="shape: auto;" position="0 1 -5">
+				<a-sphere position="-0.45 0 0" radius="1" color="#A55FA6"></a-sphere>
+				<a-sphere position="0.45 0 0" radius="1" color="#A55FA6"></a-sphere>
+				<a-cylinder position="0 1.54 0" radius="0.7" height="2" color="#A55FA6"></a-cylinder>
+				<a-sphere position="0 2.5 0" radius="0.72" color="#fc3fb3"></a-sphere>
 			</a-entity>
 
 			<a-plane static-body position="0 0 -4" rotation="-90 0 0" width="40" height="40" color="#7BC8A4"></a-plane>
