--- a/index.html
+++ b/index.html
@@ -26,19 +26,23 @@
 			</a-entity>
 
 			<a-plane static-body position="0 0 -4" rotation="-90 0 0" width="40" height="40" color="#7BC8A4"></a-plane>
-			
+
 			<a-sky rotation="0 -90 0" src="#AVulpix"></a-sky>
 
 			<a-entity position="-6 0 -6">
 				<a-entity
+					dynamic-body="shape: box"
 					obj-loader="src: url(./Models/Squirtle.obj);"
 					material="color: #41f4df"
+					position="0 10 0"
 					scale="0.5 0.5 0.5"></a-entity>
 				<a-entity
 					obj-loader="src: url(./Models/Charmander.obj);"
 					material="color: #f99543"
 					scale="0.5 0.5 0.5"
-					position="0 0 -2"></a-entity>
+					position="-2 0 -3"
+					rotation="0 0 0"
+					animation="property: rotation; to: 0 360 0; dur: 2000; loop: true; easing: easeInOutElastic"></a-entity>
 			</a-entity>
 		</a-scene>
 	</body>
