--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 			</a-assets>
 
 			<a-entity
-				kinematic-body="shape: sphere;"
+				kinematic-body
+				jump-ability
 				position="0 5 0"
 				camera="user-height: 1.6"
 				universal-controls></a-entity>
@@ -40,12 +41,15 @@
 					position="0 10 0"
 					scale="0.5 0.5 0.5"></a-entity>
 				<a-entity
-					obj-loader="src: url(./Models/Charmander.obj);"
-					material="color: #f99543"
-					scale="0.5 0.5 0.5"
-					position="-2 0 -3"
-					rotation="0 0 0"
-					animation="property: rotation; to: 0 360 0; dur: 2000; loop: true; easing: easeInOutElastic"></a-entity>
+					dynamic-body="shape: box">
+					<a-entity
+						obj-loader="src: url(./Models/Charmander.obj);"
+						material="color: #f99543"
+						scale="0.5 0.5 0.5"
+						position="-2 0 -3"
+						rotation="0 0 0"
+						animation="property: rotation; to: 0 360 0; dur: 2000; loop: true; easing: easeInOutElastic"></a-entity>
+				</a-entity>
 			</a-entity>
 		</a-scene>
 	</body>
