--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
 				<a-sphere position="0 2.5 0" radius="0.72" color="#fc3fb3"></a-sphere>
 			</a-entity>
 
-			<a-plane static-body position="0 0 -4" rotation="-90 0 0" width="40" height="40" color="#7BC8A4"></a-plane>
+			<a-ocean color="#FA6A55" width="50" depth="50" density="20" opacity="1"></a-ocean>
+
+			<a-plane static-body position="0 0 -4" rotation="-90 0 0" width="40" height="40" material="opacity: 0"></a-plane>
 
 			<a-sky rotation="0 -90 0" src="#AVulpix"></a-sky>
 
