--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 
 				<script id="penisTemplate">
 					<a-entity dynamic-body="shape: box;" >
-					 <a-sphere position="-0.45 0 0" radius="1" color="#A55FA6"></a-sphere>
-					 <a-sphere position="0.45 0 0" radius="1" color="#A55FA6"></a-sphere>
-					 <a-cylinder position="0 1.54 0" radius="0.7" height="2" color="#A55FA6"></a-cylinder>
-					 <a-sphere position="0 2.5 0" radius="0.72" color="#fc3fb3"></a-sphere>
+					 <a-sphere position="-0.45 0 0" radius="1" color="#562900"></a-sphere>
+					 <a-sphere position="0.45 0 0" radius="1" color="#562900"></a-sphere>
+					 <a-cylinder position="0 1.54 0" radius="0.7" height="2" color="#562900"></a-cylinder>
+					 <a-sphere position="0 2.5 0" radius="0.72" color="#562900"></a-sphere>
 					</a-entity>
 		    </script>
 				<a-asset-item id="charmander-obj" src="./Models/Charmander.obj"></a-asset-item>
@@ -34,7 +34,7 @@
 				universal-controls></a-entity>
 
 			<a-entity template="src: #penisTemplate; type: html" position="0 1 -5"/></a-entity>
-			<a-entity template="src: #penisTemplate; type: html" position="10 1 -5"/></a-entity>
+			<a-entity template="src: #penisTemplate; type: htmdl" position="10 1 -5"/></a-entity>
 			<a-entity template="src: #penisTemplate; type: html" position="5 1 -10"/></a-entity>
 
 			<a-ocean color="#FA6A55" width="50" depth="50" density="20" opacity="1"></a-ocean>
@@ -55,7 +55,7 @@
 					<a-entity
 						obj-model="obj: #charmander-obj; mtl: #charmander-mtl"
 						scale="0.5 0.5 0.5"
-						position="-2 0 -3"
+						position="-2 0.1 -3"
 						rotation="0 0 0"
 						animation="property: rotation; to: 0 360 0; dur: 2000; loop: true; easing: easeInOutElastic"></a-entity>
 				</a-entity>
