--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				universal-controls></a-entity>
 
 			<a-entity template="src: #penisTemplate; type: html" position="0 1 -5"/></a-entity>
-			<a-entity template="src: #penisTemplate; type: htmdl" position="10 1 -5"/></a-entity>
+			<a-entity template="src: #penisTemplate; type: html" position="10 1 -5"/></a-entity>
 			<a-entity template="src: #penisTemplate; type: html" position="5 1 -10"/></a-entity>
 
 			<a-ocean color="#FA6A55" width="50" depth="50" density="20" opacity="1"></a-ocean>
