fix plane position

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 			<a-ocean color="#FA6A55" width="50" depth="50" density="20" opacity="1"></a-ocean>
 
-			<a-plane static-body position="0 0 -4" rotation="-90 0 0" width="40" height="40" material="opacity: 0"></a-plane>
+			<a-plane static-body rotation="-90 0 0" width="40" height="40" material="opacity: 0"></a-plane>
 
 			<a-sky rotation="0 -90 0" src="#AVulpix"></a-sky>
 
